<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.products.card.CardDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_card_detail_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/card_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_card_detail_image">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Á Cell Breeding Device" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_race"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_name">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_type"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Spell Card" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_attribute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_type">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_race"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Continuous" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_race"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_description">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/detail_attribute" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="Not contain"
                tools:text="Spell Card" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/llc_card_detail_attack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_attribute">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_description"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="During each of your Standby Phases, put 1 A-Counter on 1 face-up monster your opponent controls" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_attack"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_description">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_attack"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_defense"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_attack">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_defense"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10000" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_card_detail_level"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llc_card_detail_defense">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/detail_level"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_card_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>